BGP_38 Cache Layer Refactoring and Fixes, BGP_5_ALT: Implementation of the 'Enrichment Service' Mechanism, BGP_37 WebClient Retry Mechanism Upgrade